# finance-agentic-rag-chatbot

./: .gitignore  README.md  pyproject.toml
app/: main.py  models.py
app/chatbot/chat/: templates.py  utils.py
app/chatbot/chat/schemas/: model.py  state.py
app/chatbot/chat/services/: mcp_client.py  openai_client.py  redis_cache.py
app/chatbot/chat/workflow/: graph.py
app/chatbot/ingestion/: utils.py
app/chatbot/ingestion/schemas/: state.py
app/chatbot/ingestion/services/: vector_store.py
app/chatbot/ingestion/workflow/: graph.py
app/core/: config.py  config_setup.py  logging_config.py
app/routers/: chat.py  health.py  ingestion.py
tests/: test_chat.py  test_health.py  test_mcp.py
